--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "main": "main.js",
   "dependencies": {
     "lodash": "^3.10.1"
-  },  
+  },
   "devDependencies": {
-    "electron-prebuilt": "^1.4.13",
+    "devtron": "^1.4.0",
+    "electron-builder": "^19.30.2",
     "electron-packager": "^9.1.0",
-    "electron-builder": "^19.30.2"
+    "electron-prebuilt": "^1.4.13"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
