--- a/package.json
+++ b/package.json
@@ -5,21 +5,57 @@
   "description": "Image Viewer gives you quick and easy access to your local Photos and Videos. Browse and navigate through images/videos with ease by using the arrow keys.",
   "main": "main.js",
   "dependencies": {
-    "lodash": "^3.10.1"
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "core-js": "^2.4.1",
+    "lodash": "^3.10.1",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "devtron": "^1.4.0",
     "electron-builder": "^19.30.2",
     "electron-packager": "^9.1.0",
-    "electron-prebuilt": "^1.4.13"
+    "electron-prebuilt": "^1.4.13",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~3.2.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2"
   },
   "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "npm run clean && npm run build:osx && npm run build:win",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "electron": "electron ./dist/index.html",
+    "electron-build": "ng build --prod && electron ./dist/index.html",
     "clean": "rm -rf ./dist",
     "clean:osx": "rm -rf ./dist/osx",
     "clean:win": "rm -rf ./dist/win",
-    "build": "npm run clean && npm run build:osx && npm run build:win",
     "build:osx": "npm run clean:osx && electron-packager . \"Image Viewer\" --out=dist/osx --platform=darwin --arch=x64 --icon=assets/osx/icon.icns",
     "build:win": "npm run clean:win && electron-packager . \"Image Viewer\" --out=dist/win --platform=win32 --arch=ia32 --icon=assets/win/icon.ico",
     "pack": "npm run pack:osx && npm run pack:win",
