--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "devtron": "^1.4.0",
-    "electron-builder": "^19.30.2",
-    "electron-packager": "^9.1.0",
-    "electron-prebuilt": "^1.4.13",
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.90",
     "codelyzer": "~3.2.0",
+    "devtron": "^1.4.0",
+    "electron-builder": "^19.30.2",
+    "electron-packager": "^9.1.0",
+    "electron-prebuilt": "^1.4.13",
+    "electron-reload": "^1.2.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -42,17 +43,40 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "webpack-dev-server": "~2.9.3",
+    "webpack": "~3.8.1",
+    "autoprefixer": "^6.5.3",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.29.0",
+    "less-loader": "^4.0.5",
+    "postcss-loader": "^1.3.3",
+    "postcss-url": "^5.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^3.0.1",
+    "url-loader": "^0.6.2",
+    "circular-dependency-plugin": "^3.0.0",
+    "webpack-concat-plugin": "1.4.0",
+    "copy-webpack-plugin": "^4.1.1",
+    "uglifyjs-webpack-plugin": "1.0.0"
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "npm run clean && npm run build:osx && npm run build:win",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --port=4200",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "e2e": "protractor ./protractor.conf.js",
     "electron": "electron ./dist/index.html",
-    "electron-build": "ng build --prod && electron ./dist/index.html",
+    "electron-build": "webpack && electron ./dist/index.html",
+    "build:prod": "webpack -p", 
+    "watch": "webpack --watch",
+    "build": "webpack",
     "clean": "rm -rf ./dist",
     "clean:osx": "rm -rf ./dist/osx",
     "clean:win": "rm -rf ./dist/win",
@@ -61,7 +85,10 @@
     "pack": "npm run pack:osx && npm run pack:win",
     "pack:osx": "npm run build:osx && electron-builder \"dist/osx/Image Viewer-darwin-x64/Image Viewer.app\" --platform=osx --out=\"dist/osx\"  --config=packager.json",
     "pack:win": "npm run build:win && electron-builder \"dist/win/Image Viewer-win32-ia32\" --platform=win --out=\"dist/win\" --config=packager.json",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "build": "webpack",
+    "test": "karma start ./karma.conf.js",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
   },
   "build": {
     "appId": "yyosifov.imageviewer",
