--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
+    "module": "es6",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
