--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "productName": "Image Viewer",
   "description": "Image Viewer gives you quick and easy access to your local Photos and Videos. Browse and navigate through images/videos with ease by using the arrow keys.",
-  "main": "main.js",
+  "main": "electronStartup.bundle.js",
   "dependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
@@ -26,12 +26,21 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.90",
+    "autoprefixer": "^6.5.3",
+    "circular-dependency-plugin": "^3.0.0",
     "codelyzer": "~3.2.0",
+    "copy-webpack-plugin": "^4.1.1",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
     "devtron": "^1.4.0",
     "electron-builder": "^19.30.2",
     "electron-packager": "^9.1.0",
     "electron-prebuilt": "^1.4.13",
     "electron-reload": "^1.2.2",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.29.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -40,41 +49,33 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "webpack-dev-server": "~2.9.3",
-    "webpack": "~3.8.1",
-    "autoprefixer": "^6.5.3",
-    "css-loader": "^0.28.1",
-    "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.29.0",
     "less-loader": "^4.0.5",
     "postcss-loader": "^1.3.3",
     "postcss-url": "^5.1.2",
+    "protractor": "~5.1.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.1",
+    "ts-loader": "^3.1.1",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2",
+    "uglifyjs-webpack-plugin": "1.0.0",
     "url-loader": "^0.6.2",
-    "circular-dependency-plugin": "^3.0.0",
+    "webpack": "~3.8.1",
     "webpack-concat-plugin": "1.4.0",
-    "copy-webpack-plugin": "^4.1.1",
-    "uglifyjs-webpack-plugin": "1.0.0"
+    "webpack-dev-server": "~2.9.3"
   },
   "scripts": {
     "ng": "ng",
     "start": "webpack-dev-server --port=4200",
     "lint": "ng lint",
     "e2e": "protractor ./protractor.conf.js",
-    "electron": "electron ./dist/index.html",
+    "electron": "electron ./dist/electronStartup.bundle.js",
     "electron-build": "webpack && electron ./dist/index.html",
-    "build:prod": "webpack -p", 
+    "build:prod": "webpack -p",
     "watch": "webpack --watch",
     "build": "webpack",
     "clean": "rm -rf ./dist",
@@ -86,7 +87,6 @@
     "pack:osx": "npm run build:osx && electron-builder \"dist/osx/Image Viewer-darwin-x64/Image Viewer.app\" --platform=osx --out=\"dist/osx\"  --config=packager.json",
     "pack:win": "npm run build:win && electron-builder \"dist/win/Image Viewer-win32-ia32\" --platform=win --out=\"dist/win\" --config=packager.json",
     "dist": "electron-builder",
-    "build": "webpack",
     "test": "karma start ./karma.conf.js",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
   },
