fix package.json for electron cmd after webpack changes

--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "start": "webpack-dev-server --port=4200",
     "lint": "ng lint",
     "e2e": "protractor ./protractor.conf.js",
-    "electron": "electron ./dist/electronStartup.bundle.js",
-    "electron-build": "webpack && electron ./dist/index.html",
+    "electron": "electron ./dist/electron-startup.js",
+    "electron-build": "webpack && electron ./dist/electron-startup.html",
     "build:prod": "webpack -p",
     "watch": "webpack --watch",
     "build": "webpack",
